--- a/service/service-acupoint/src/main/resources/application.yaml
+++ b/service/service-acupoint/src/main/resources/application.yaml
@@ -3,6 +3,6 @@ spring:
     name: service-acupoint
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ai_assistant?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    username: root
+    url: jdbc:mysql://8.138.45.249:3306/acupoint?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    username: wang
     password: 123456
