--- a/service/service-acupoint/src/main/resources/application.yaml
+++ b/service/service-acupoint/src/main/resources/application.yaml
@@ -25,6 +25,12 @@ spring:
       port: 6379
       database: 0
       password: 123456
+      lettuce:
+        pool:
+          max-active: 16 #最大连接数
+          max-wait: 5000ms #阻塞时间
+          max-idle: 8 #最大空闲连接数
+          min-idle: 1 #最小空闲连接数
 logging:
   level:
     org.springframework.ai: debug
